testing new dragDrop

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="lib/dirPagination.js"></script>
 
   <script src="js/app.js"></script>
+    <script src="lib/draganddrop.js"></script>
   <script src="js/controllers/login.js"></script>
   <script src="js/services/authentication.js"></script>
 
@@ -40,6 +41,7 @@
         <li ng-class="{ active: isActive('/personnel') }"><a ng-href="#/personnel">Personnel</a></li>
         <li ng-class="{ active: isActive('/tests') }"><a ng-href="#/tests">Test</a></li>
         <li ng-class="{ active: isActive('/consort') }"><a ng-href="#/consort">Consortiums</a></li>
+            <li ng-class="{ active: isActive('/testLayout') }"><a ng-href="#/testLayout">Test Layout</a></li>
     </ul>
     </div>
 </aside>
