--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     <!--<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>-->
   <script src="lib/angular.min.js"></script>
+    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
   <script src="lib/angular-route.min.js"></script>
   <script src="lib/angular-animate.min.js"></script>
   <script src="lib/angular-cookies.js"></script>
@@ -20,6 +21,7 @@
   <script src="js/app.js"></script>
   <script src="js/controllers/login.js"></script>
   <script src="js/services/authentication.js"></script>
+    <script src="js/services/createEdit.js"></script>
 
 </head>
 
